--- a/svelte/src/app.css
+++ b/svelte/src/app.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.timelinebar {
+    @apply absolute top-3 left-[7px] bg-white h-full w-[2px];
+}
+
+.timelinedot {
+    @apply absolute left-0 bg-white rounded-full h-4 w-4;
+}
+
+.timelinedate {
+    @apply absolute -mt-[4px] hidden lg:block lg:-left-28 w-28 text-white font-bold;
+}
+
+.timelinetext {
+    @apply absolute -mt-16 left-0 bg-transparent rounded-md h-36 w-96 flex items-center justify-center font-bold text-2xl text-white text-center;
+}
+
+.agetext {
+    @apply text-white text-center px-20 text-[6rem];
+}
+
+.contactCard {
+    @apply w-72 h-28 sm:h-48 rounded-md;
+}
+
+::-webkit-scrollbar {
+    width: 0;
+    background: transparent;
+}
