--- a/svelte/src/app.css
+++ b/svelte/src/app.css
@@ -26,6 +26,32 @@
     @apply w-72 h-28 sm:h-48 rounded-md;
 }
 
+
+.dot {
+    height: 4px;
+    width: 4px;
+    background-color: #fff;
+    border-radius: 50%;
+    display: inline-block;
+    cursor: pointer;
+
+    mix-blend-mode: difference;
+    transition: all .2s ease-in-out;
+}
+
+.dot:hover {
+    transform: scale(1.6);
+}
+
+.dotActive {
+    transition: all .2s ease-in-out;
+    height: 10px;
+    width: 10px;
+    background-color: #fff;
+    border-radius: 50%;
+    display: inline-block;
+}
+
 ::-webkit-scrollbar {
     width: 0;
     background: transparent;
