--- a/svelte/src/app.css
+++ b/svelte/src/app.css
@@ -26,6 +26,10 @@
     @apply w-72 h-28 sm:h-48 rounded-md;
 }
 
+.projectCard {
+    @apply w-full aspect-[16/9] bg-neutral-800 rounded-md hover:scale-[102%] transition-all shadow-md;
+}
+
 .dot {
     height: 4px;
     width: 4px;
